rabbitmq-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      amqp: rabbitmq
  template:
    metadata:
      labels:
        amqp: rabbitmq
    spec:
      volumes:
        - name: rabbitmq-storage
          persistentVolumeClaim:
            claimName: rabbitmq-pvc
      containers:
      - name: rabbitmq
        image: rabbitmq:management
        resources:
          requests:
            memory: "1000MiB"
            cpu: "0.5"
        ports:
        - containerPort: 5672
        - containerPort: 15672
        volumeMounts:
          - name: rabbitmq-storage
            mountPath: /var/lib/rabbitmq
