cenit-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: cenit-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    platform: cenit
  ports:
  - port: 8080
    targetPort: 8080
