cenit-loadbalancer-service.yml
apiVersion: v1
kind: Service
metadata:  
  name: cenit-loadbalancer-service
spec:
  selector:    
    platform: cenit
  type: LoadBalancer
  ports:  
  - port: 80
    targetPort: 80
    protocol: TCP
