mongo-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-cluster-ip-service
spec:
  selector:
    db: mongo
  ports:
  - port: 27017
    targetPort: 27017
