mongo-configuration.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      db: mongo
  template:
    metadata:
      labels:
        db: mongo
    spec:
      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: mongo-pvc
      containers:
      - name: mongodb
        image: mongo:4.4
        resources:
          limits:
            cpu: "20m"
            memory: "250M"
        ports:
        - containerPort: 27017
        volumeMounts:
          - name: mongo-storage
            mountPath: /data/db

---

apiVersion: v1
kind: Service
metadata:
  name: mongo-cluster-ip-service
spec:
  selector:
    db: mongo
  ports:
  - port: 27017
    targetPort: 27017
