rabbitmq-configuration.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      amqp: rabbitmq
  template:
    metadata:
      labels:
        amqp: rabbitmq
    spec:
      volumes:
        - name: rabbitmq-storage
          persistentVolumeClaim:
            claimName: rabbitmq-pvc
      containers:
      - name: rabbitmq
        image: rabbitmq:management
        resources:
          limits:
            cpu: "20m"
            memory: "250M"
        ports:
        - containerPort: 5672
        - containerPort: 15672
        volumeMounts:
          - name: rabbitmq-storage
            mountPath: /var/lib/rabbitmq

---

apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    amqp: rabbitmq
  ports:
  - name: consumers-port
    port: 5672
    targetPort: 5672
  - name: gui-port
    port: 15672
    targetPort: 15672
