redis-configuration.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      store: redis
  template:
    metadata:
      labels:
        store: redis
    spec:
      volumes:
        - name: redis-storage
          persistentVolumeClaim:
            claimName: redis-pvc
      containers:
      - name: redis
        image: redis
        resources:
          limits:
            memory: "1Gi"
            cpu: "350m"
        command: ["redis-server", "--appendonly", "yes"]
        ports:
        - containerPort: 6379
        volumeMounts:
          - name: redis-storage
            mountPath: /data

---

apiVersion: v1
kind: Service
metadata:
  name: redis-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    store: redis
  ports:
  - name: service-port
    port: 6379
    targetPort: 6379
