cenit-configuration.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cenit-deployment-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      platform: cenit-backend
  template:
    metadata:
      labels:
        platform: cenit-backend
    spec:  
      volumes:
        - name: host-docker-socket
          hostPath:
            path: /var/run/docker.sock
        - name: host-volume
          hostPath:
            path: / 
      imagePullSecrets:
      - name: regcred 
      containers:
      - name: cenit-backend
        image: cenitipaas/cenit-backend:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "4Gi"
            cpu: "1000m"
        volumeMounts:
          - name: host-docker-socket
            mountPath: /var/run/docker.sock
          - name: host-volume
            mountPath: /host
            readOnly: true
        securityContext:
            capabilities:
              add:
                - SYS_PTRACE
        command: ["bundle", "exec", "unicorn", "-c", "config/unicorn.rb"]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cenit-deployment-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      platform: cenit-frontend
  template:
    metadata:
      labels:
        platform: cenit-frontend
    spec:
      volumes:
        - name: host-docker-socket
          hostPath:
            path: /var/run/docker.sock
        - name: host-volume
          hostPath:
            path: /
      imagePullSecrets:
      - name: regcred 
      containers:
      - name: cenit-frontend
        image: cenitipaas/cenit-frontend:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "4Gi"
            cpu: "1000m"
        volumeMounts:
          - name: host-docker-socket
            mountPath: /var/run/docker.sock
          - name: host-volume
            mountPath: /host
            readOnly: true
        securityContext:
            capabilities:
              add:
                - SYS_PTRACE
        command: ["bundle", "exec", "unicorn", "-c", "config/unicorn.rb"]
        ports:
        - containerPort: 8080          
---

apiVersion: v1
kind: Service
metadata:
  name: cenit-cluster-ip-service
spec:
  selector:
    platform: cenit-frontend
  ports:
  - port: 8080
    targetPort: 8080

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cenit-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: 800m
spec:
  rules:
  - host: <HOST>
    http:
      paths:
      - path: /
        backend:
          serviceName: cenit-cluster-ip-service
          servicePort: 8080
