ingress-service.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: ingress-service
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: cenit-cluster-ip-service
              servicePort: 8080
          - path: /rabbitmq
            backend:
              serviceName: rabbitmq-cluster-ip-service
              servicePort: 15672
